# bsdiff-standalone

./: .gitmodules  README.md  meson.build
